--- a/css/index.css
+++ b/css/index.css
@@ -449,6 +449,52 @@ footer .copyright {
   color: white;
 }
 
+.generateNewIDDiv #snapshotDiv {
+  margin-top: 1rem;
+}
+
+.generateNewIDDiv #snapshotDiv textarea {
+  resize: none !important;
+  border: 1px solid;
+  width: 60rem;
+  padding-left: 1rem;
+}
+
+.generateNewIDDiv #snapshotDiv textarea::placeholder {
+  padding-left: 1rem;
+}
+
+.generateNewIDDiv #detailDiv {
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
+
+.generateNewIDDiv #detailDiv input {
+  border: 1px solid;
+  margin-left: 2rem;
+  height: 3rem;
+  padding-left: 1rem;
+}
+
+.generateNewIDDiv #detailDiv input::placeholder {
+  padding-left: 1rem;
+}
+
+.generateNewIDDiv #detailDiv .titleInput {
+  width: 30rem;
+}
+
+.generateNewIDDiv #saveNewPostDetail {
+  margin-top: 1rem;
+  height: 10rem;
+  width: 10rem;
+}
+
+.generateNewIDDiv .detailBlock {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .uploadHTMLDiv #errorMsgUploadHTML {
   margin-top: 1rem !important;
 }
